Revert "fix touch to play chess on mobile"
This reverts commit 8651634037557ec47a483f2c9896ada546cb0c24.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-
-.overflow-hidden {
-    overflow: hidden !important;
-}
-
 .board {
     width: 400px;
     margin: auto;
